@@ -37,6 +37,7 @@ TODO: ev_feed_child_event
           works in all cases (unlike read/write/send/recv...).
         - try to detect signals around a fork faster (test program by
           Denis Bilenko).
+        - work around recent glibc versions that leak memory in realloc.
 
 4.11 Sat Feb  4 19:52:39 CET 2012
 	- INCOMPATIBLE CHANGE: ev_timer_again now clears the pending status, as
